added camera permission

--- a/plugin.xml
+++ b/plugin.xml
@@ -22,6 +22,7 @@
         </config-file>
         <config-file target="AndroidManifest.xml" parent="/*">
         	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+        	<uses-permission android:name="android.permission.CAMERA" />
         </config-file>
         
         <source-file src="src/android/GalleryCameraLauncher.java" target-dir="src/es/lmmartin/cordova/camera" />
